c++: Avoid redundant copy in {} init [PR98642]

Here, initializing from { } implies a call to the default constructor for
base.  We were then seeing that we're initializing a base subobject, so we
tried to copy the result of that call.  This is clearly wrong; we should
initialize the base directly from its default constructor.

gcc/cp/ChangeLog:

	PR c++/98642
	* typeck2.c (split_nonconstant_init_1): Don't copy a list-init
	constructor call.

gcc/testsuite/ChangeLog:

	PR c++/98642
	* g++.dg/cpp1z/elide5.C: New test.